# https---github.com-pandeymanan024-big-data-project

./: .gitignore  Makefile  PROJECT_PAPER.md  README.md  pyproject.toml  requirements.txt
artifacts_from_m5_raw/: diagnosis_report.txt
artifacts_from_m5_raw/forecast.parquet/: .part-00000-b3591bab-dd6e-4ce4-a42e-dba27f14728d-c000.snappy.parquet.crc  part-00000-b3591bab-dd6e-4ce4-a42e-dba27f14728d-c000.snappy.parquet
artifacts_from_m5_raw/inventory_fulfillment.parquet/: .part-00000-319b50f2-ac31-4ed6-89be-eba5f3a7312c-c000.snappy.parquet.crc  part-00000-319b50f2-ac31-4ed6-89be-eba5f3a7312c-c000.snappy.parquet
artifacts_from_m5_raw/processed_demand.parquet/: .part-00000-29b2a0b1-d503-49e3-a4c6-bf0b5f3efc3e-c000.snappy.parquet.crc  part-00000-29b2a0b1-d503-49e3-a4c6-bf0b5f3efc3e-c000.snappy.parquet
artifacts_from_m5_raw/recommendations.parquet/: .part-00000-2c472a0a-15de-464d-b9cb-d1838876b54e-c000.snappy.parquet.crc  part-00000-2c472a0a-15de-464d-b9cb-d1838876b54e-c000.snappy.parquet
artifacts_from_m5_raw/validation_logs.parquet/: .part-00000-013f17a2-a0f6-4e17-9578-94ef6062d97d-c000.snappy.parquet.crc  .part-00001-013f17a2-a0f6-4e17-9578-94ef6062d97d-c000.snappy.parquet.crc  .part-00002-013f17a2-a0f6-4e17-9578-94ef6062d97d-c000.snappy.parquet.crc  .part-00003-013f17a2-a0f6-4e17-9578-94ef6062d97d-c000.snappy.parquet.crc  part-00000-013f17a2-a0f6-4e17-9578-94ef6062d97d-c000.snappy.parquet  part-00001-013f17a2-a0f6-4e17-9578-94ef6062d97d-c000.snappy.parquet  (+2 more)
src/supply_chain_agentic_ai.egg-info/: PKG-INFO  (+4 more)
tests/: test_agent_workflow.py  test_synthetic_data.py
(+14 files in other folders)
