[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-agentic-ai"
version = "0.1.0"
description = "Agentic AI System for Supply Chain Resilience and Decision Intelligence"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sanjeet Mishra" },
  { name = "Manan Pandey" }
]
dependencies = [
  "pyspark>=3.5.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "numpy>=1.26.0",
  "langgraph>=0.2.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0"
]

[project.scripts]
supply-chain-ai = "supply_chain_ai.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
